--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -230,7 +230,7 @@ section {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-.header {
+/* .header {
   padding: 15px 0;
   transition: all 0.5s;
   z-index: 997;
@@ -281,6 +281,45 @@ section {
   .header .btn-getstarted:focus {
     margin-right: 50px;
   }
+} */
+
+#header {
+  height: 80px;
+  transition: all 0.5s;
+  z-index: 997;
+  transition: all 0.5s;
+  background: #1e4356;
+}
+
+#header.header-transparent {
+  background: none;
+}
+
+#header.header-scrolled {
+  background: rgba(30, 67, 86, 0.8);
+  height: 60px;
+}
+
+#header .logo h1 {
+  font-size: 28px;
+  margin: 0;
+  padding: 4px 0;
+  line-height: 1;
+  font-weight: 400;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+
+#header .logo h1 a,
+#header .logo h1 a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+#header .logo img {
+  padding: 0;
+  margin: 0;
+  max-height: 40px;
 }
 
 /*--------------------------------------------------------------
@@ -317,7 +356,8 @@ section {
     font-family: var(--font-secondary);
     font-size: 16px;
     font-weight: 400;
-    color: rgba(var(--color-secondary-dark-rgb), 0.7);
+    /* color: rgba(var(--color-secondary-dark-rgb), 0.7); */
+    color: rgb(0,0,0);
     white-space: nowrap;
     transition: 0.3s;
     position: relative;
